Add biography field validation Update user profile page Create biography edit page Add biography edit route Update user controller Create UserBiographyType form Update User entity Update User fixtures Update document show template Update document partial template Update user nav template Update document controller Create biography edit template Create profile edit template Update user controller

--- a/templates/partials/_document.html.twig
+++ b/templates/partials/_document.html.twig
@@ -41,7 +41,8 @@
 		</p>
 		<div class="card-footer d-flex justify-content-between bg-white mt-auto">
 			<div class="author">
-				<img src="assets/img/julie.jpg" alt="" class="avatar img-raised">
+				<img src="{{ document.author.avatar }}" alt="" class="avatar">
+
 				<span>{{ document.author.username }}</span>
 			</div>
 			<div class="stats d-flex">
