--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -7,13 +7,13 @@
   --neutral-700-color: #0c1121;
   --neutral-900-color: #040917;
 
-  --sixieme-color: #C7D8E6;
-  --cinquieme-color: #A4C3D9;
-  --quatrieme-color: #7CA7C8;
-  --troisieme-color: #5787A6;
-  --seconde-color: #396B8E;
-  --premiere-color: #23527A;
-  --terminale-color: #103A5B;
+  --sixieme-color: #c7d8e6;
+  --cinquieme-color: #a4c3d9;
+  --quatrieme-color: #7ca7c8;
+  --troisieme-color: #5787a6;
+  --seconde-color: #396b8e;
+  --premiere-color: #23527a;
+  --terminale-color: #103a5b;
 }
 
 .text-sixieme {
@@ -24,7 +24,6 @@
 .text-cinquieme {
   color: var(--cinquieme-color) !important;
   font-weight: 700;
-
 }
 
 .text-quatrieme {
@@ -52,23 +51,23 @@
   font-weight: 700;
 }
 
-h4>a {
-  color: #103A5B;
+h4 > a {
+  color: #103a5b;
   position: relative;
 }
 
-h4>a::after {
-  content: '';
+h4 > a::after {
+  content: "";
   position: absolute;
   bottom: -0.3rem;
   left: 0;
   width: 0%;
   height: 0.2rem;
-  background-color: #103A5B;
+  background-color: #103a5b;
   transition: width 0.3s ease-in-out;
 }
 
-h4>a:hover::after {
+h4 > a:hover::after {
   width: 100%;
 }
 
@@ -147,9 +146,11 @@ a {
 }
 
 select.form-control {
-  background-image: linear-gradient(45deg,
+  background-image: linear-gradient(
+      45deg,
       transparent 50%,
-      var(--neutral-900-color) 50%),
+      var(--neutral-900-color) 50%
+    ),
     linear-gradient(135deg, var(--neutral-900-color) 50%, transparent 50%);
   background-position: calc(100% - 20px) calc(1em + 2px),
     calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
@@ -214,4 +215,13 @@ legend {
 
 .doc-title {
   font-size: 2rem !important;
+}
+
+.avatar {
+  width: 30px;
+  height: 30px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-right: 5px;
+  box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.3);
 }
