--- a/templates/partials/_user-nav.html.twig
+++ b/templates/partials/_user-nav.html.twig
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column align-items-center justify-content-between my-5">
 	<div class="d-flex flex-column align-items-center">
 		<div class="rounded-circle">
-			<img src="{{ asset('images/avatars/' ~ app.user.avatar) }}" alt="Photo de profil" class="w-100 rounded-circle">
+			<img src="{{ app.user.avatar }}" alt="Photo de profil" class="w-100 rounded-circle">
 		</div>
 		<p class="text-center">Heureux de vous revoir,<br>
 
