--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,8 +1,7 @@
 <footer class="bg-light py-3 mt-auto">
-	<section class="row row-cols-1 row-cols-md-3 mx-3">
-		<div class="col text-center">
-			<img src="" alt="" class="logo">
-			<h2>TeachingHub</h2>
+	<section class="row row-cols-1 row-cols-md-3 mx-3 g-3">
+		<div class="col d-flex align-items-center justify-content-center">
+			<img src="{{ asset('images/logo-lg.png') }}" alt="" class="w-75">
 		</div>
 		<div class="col">
 			<h3>Chercher un document</h3>
