--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -2,7 +2,7 @@
 	<nav class="navbar navbar-expand-lg" aria-label="Ninth navbar example">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="{{ path('app_home') }}">
-				TeachingHub
+				<img src="{{ asset('images/logo-lg.png') }}" alt="TeachingHub" class="w-100 logo">
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07XL" aria-controls="navbarsExample07XL" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
