--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -36,7 +36,7 @@
 						<a href="{{ path('app_privacy') }}">Politique de confidentialité</a>
 					</li>
 					<li>
-						<a href="https://buymeacoffee.com/lapinou.tech" target="_blank">Nos partenaires</a>
+						<a href="https://buymeacoffee.com/lapinou.tech" target="_blank">Soutenir TeachingHub</a>
 					</li>
 				</ul>
 			</nav>
