Update templates and controllers

--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -98,7 +98,7 @@
 			<div class="spacer"></div>
 			<p class="text-center">Notre équipe est là pour répondre à vos questions et vous aider.</p>
 			<p class="text-center">
-				<a href="#">Cliquez ici pour trouver toutes les réponses à vos questions</a>
+				<a href="{{ path('app_faq') }}">Cliquez ici pour trouver toutes les réponses à vos questions</a>
 			</p>
 		</div>
 	</div>
