--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -36,6 +36,9 @@
 						<a href="{{ path('app_privacy') }}">Politique de confidentialité</a>
 					</li>
 					<li>
+						<a href="{{ path('app_faq') }}">Foire aux questions</a>
+					</li>
+					<li>
 						<a href="https://buymeacoffee.com/lapinou.tech" target="_blank">Soutenir TeachingHub</a>
 					</li>
 				</ul>
