Add topDownloads action and top_downloads.html.twig template

--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -7,7 +7,9 @@
 			<h3>Chercher un document</h3>
 			<nav class="mb-3">
 				<ul class="navbar-nav ms-3">
-					<li>Top documents téléchargés</li>
+					<li>
+						<a href="{{ path('document_top_downloads') }}">Top documents téléchargés</a>
+					</li>
 					<li>Derniers documents déposés</li>
 					<li>Documents par matière</li>
 					<li>Documents par niveau</li>
