--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -19,11 +19,11 @@
 }
 
 .logo {
-  max-width: 200px;
+  max-width: 5rem;
 }
 
 @media (min-width: 768px) {
   .logo {
-    max-width: 300px;
+    max-width: 5rem;
   }
 }
