--- a/templates/app/home_connected.html.twig
+++ b/templates/app/home_connected.html.twig
@@ -9,6 +9,7 @@
 	{{ render(controller('App\\Controller\\SubjectController::allSubjectsAction')) }}
 
 	<div class="container">
+		<h2>Les chiffres de la plateforme</h2>
 		<div class="row row-cols-lg-3 g-3 mb-5 hidden-mobile">
 			<div class="col">
 				<div class="rounded bg-tile-default py-3 text-center ratio ratio-4x3">
