Delete unused images and update CSS and Twig files

--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -40,7 +40,7 @@
 			<p>Faciliter le partage de connaissances et de ressources pédagogiques entre enseignants pour enrichir l'expérience d'apprentissage.</p>
 			<p>Notre objectif est de créer une communauté collaborative où les enseignants peuvent partager, découvrir et collaborer autour de ressources éducatives de qualité.</p>
 			<span class="center">
-				<button class="btn btn-lg btn-primary">Inscrivez-vous maintenant</button>
+				<a href="{{ path('app_register') }}" class="btn btn-lg btn-primary">Inscrivez-vous maintenant</a>
 			</span>
 		</div>
 	</div>
@@ -59,7 +59,7 @@
 					Connectez-vous avec d'autres enseignants, échangez des idées, discutez des meilleures pratiques et améliorez votre enseignement.</li>
 			</ol>
 			<span class="center">
-				<button class="btn btn-lg btn-primary">Inscrivez-vous maintenant</button>
+				<a href="{{ path('app_register') }}" class="btn btn-lg btn-primary">Inscrivez-vous maintenant</a>
 			</span>
 		</div>
 		<div class="feature-video feature-video-even d-flex align-items-center justify-content-center">
@@ -86,7 +86,7 @@
 					Découvrez de nouvelles méthodes, approches et stratégies éducatives pour enrichir vos cours et votre enseignement au quotidien.</li>
 			</ul>
 			<span class="center">
-				<button class="btn btn-lg btn-primary">Inscrivez-vous maintenant</button>
+				<a href="{{ path('app_register') }}" class="btn btn-lg btn-primary">Inscrivez-vous maintenant</a>
 			</span>
 		</div>
 	</div>
