--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -15,12 +15,10 @@
 							<i class="fa-duotone fa-magnifying-glass me-2"></i>Chercher un document</a>
 
 					</li>
-					{% if app.user %}
+					{% if app.user and app.user.isVerified %}
 						<li class="nav-item">
 							<a class="nav-link" href="{{ path('document_add') }}">
-
 								<i class="fa-duotone fa-upload me-2"></i>Déposer un document</a>
-
 						</li>
 					{% endif %}
 				</ul>
