Update branding and text in templates and fixtures

--- a/templates/app/faq.html.twig
+++ b/templates/app/faq.html.twig
@@ -17,27 +17,27 @@
 	<div class="container">
 		<div class="list-group" id="faqList">
 			<a href="#faqItem1" class="list-group-item list-group-item-action" data-bs-toggle="collapse" aria-expanded="true" aria-controls="faqItem1">
-				<h5 class="mb-1">1. Qu'est-ce que TeachingHub ?</h5>
+				<h5 class="mb-1">1. Qu'est-ce que PartageProf ?</h5>
 			</a>
 			<div class="collapse" id="faqItem1">
 				<div class="card card-body">
-					TeachingHub est un outil en ligne conçu pour permettre aux enseignants de partager des ressources pédagogiques telles que des cours, des exercices, des présentations, et bien plus encore.
+					PartageProf est un outil en ligne conçu pour permettre aux enseignants de partager des ressources pédagogiques telles que des cours, des exercices, des présentations, et bien plus encore.
 				</div>
 			</div>
 
 			<!-- FAQ Item 2 -->
 			<a href="#faqItem2" class="list-group-item list-group-item-action" data-bs-toggle="collapse" aria-expanded="false" aria-controls="faqItem2">
-				<h5 class="mb-1">2. Qui peut utiliser TeachingHub ?</h5>
+				<h5 class="mb-1">2. Qui peut utiliser PartageProf ?</h5>
 			</a>
 			<div class="collapse" id="faqItem2">
 				<div class="card card-body">
-					TeachingHub est principalement destinée aux enseignants de tous niveaux, de l'école primaire à l'université, ainsi qu'aux éducateurs et formateurs. C'est pourquoi, seul les personnes disposant d'une adresse académique peuvent s'inscrire sur la plateforme. Toutefois, tous les documents restent visualisables et téléchargeables par tout le monde.
+					PartageProf est principalement destinée aux enseignants de tous niveaux, de l'école primaire à l'université, ainsi qu'aux éducateurs et formateurs. C'est pourquoi, seul les personnes disposant d'une adresse académique peuvent s'inscrire sur la plateforme. Toutefois, tous les documents restent visualisables et téléchargeables par tout le monde.
 				</div>
 			</div>
 
 			<!-- FAQ Item 3 -->
 			<a href="#faqItem3" class="list-group-item list-group-item-action" data-bs-toggle="collapse" aria-expanded="false" aria-controls="faqItem3">
-				<h5 class="mb-1">3. Comment puis-je partager des documents sur TeachingHub ?</h5>
+				<h5 class="mb-1">3. Comment puis-je partager des documents sur PartageProf ?</h5>
 			</a>
 			<div class="collapse" id="faqItem3">
 				<div class="card card-body">
@@ -51,7 +51,7 @@
 			</a>
 			<div class="collapse" id="faqItem4">
 				<div class="card card-body">
-					Oui. Tous les documents déposés sur la plateforme TeachingHub sont accessibles à tous les utilisateurs, qu'ils soient inscrits ou non.
+					Oui. Tous les documents déposés sur la plateforme PartageProf sont accessibles à tous les utilisateurs, qu'ils soient inscrits ou non.
 				</div>
 			</div>
 
@@ -71,7 +71,7 @@
 			</a>
 			<div class="collapse" id="faqItem6">
 				<div class="card card-body">
-					TeachingHub est une plateforme conçue pour permettre aux professeurs de partager leurs documents pédagogiques. Il est nécessaire de bien vérifier que vous disposez de tous les droits nécessaires avant de partager un document sur la plateforme TeachingHub. TeachingHub se dégage de toute responsabilité en cas de partage de documents protégés par des droits d'auteur.
+					PartageProf est une plateforme conçue pour permettre aux professeurs de partager leurs documents pédagogiques. Il est nécessaire de bien vérifier que vous disposez de tous les droits nécessaires avant de partager un document sur la plateforme PartageProf. PartageProf se dégage de toute responsabilité en cas de partage de documents protégés par des droits d'auteur.
 				</div>
 			</div>
 
