--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -63,7 +63,7 @@
 			</span>
 		</div>
 		<div class="feature-video feature-video-even d-flex align-items-center justify-content-center">
-			<img src="{{ asset('/images/how-it-works.png') }}" class="feature-img" alt="Cycle de partage et de collaboration de TeachingHub">
+			<img src="{{ asset('/images/how-it-works.png') }}" class="feature-img" alt="Cycle de partage et de collaboration de PartageProf">
 		</div>
 	</div>
 	{{ render(controller('App\\Controller\\SubjectController::allSubjectsAction')) }}<div class="feature">
