--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -40,7 +40,7 @@
 						<a href="{{ path('app_faq') }}">Foire aux questions</a>
 					</li>
 					<li>
-						<a href="https://buymeacoffee.com/lapinou.tech" target="_blank">Soutenir TeachingHub</a>
+						<a href="https://buymeacoffee.com/lapinou.tech" target="_blank">Soutenir PartageProf</a>
 					</li>
 				</ul>
 			</nav>
