--- a/templates/partials/_marquee-text.html.twig
+++ b/templates/partials/_marquee-text.html.twig
@@ -5,7 +5,7 @@
 				<span class="separator">
 					<svg width="16" height="16" xmlns="http://www.w3.org/2000/svg"><circle cx="8" cy="8" r="8" fill="#000"/></svg>
 				</span>
-				<p class="banner-text">TeachingHub</p>
+				<p class="banner-text">PartageProf</p>
 			{% endfor %}
 		</div>
 	</div>
