--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-	<h1>Merci de vous être inscrit sur TeachingHub</h1>
+	<h1>Merci de vous être inscrit sur PartageProf</h1>
 
 	<p>
-		Avant de pouvoir passer à la suite et partager vos documents sur la plateforme TeachingHub, merci de confirmer votre adresse mail en cliquant sur le lien suivant :
+		Avant de pouvoir passer à la suite et partager vos documents sur la plateforme PartageProf, merci de confirmer votre adresse mail en cliquant sur le lien suivant :
 		<div id="btn">
 			<a href="{{ signedUrl|raw }}" type="button" class="btn">Confirmer mon adresse email</a>
 		</div>
@@ -14,7 +14,7 @@
 	</p>
 
 	<p>
-		A très bientôt sur TeachingHub!
+		A très bientôt sur PartageProf!
 	</p>
 
 {% endblock %}
