--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -2,14 +2,16 @@
 
 {% block content %}
 
-<h1>Alors ?! on a oublié son mot de passe ?</h1>
+	<h1>Alors ?! on a oublié son mot de passe ?</h1>
 
-<p>Afin de renouveler votre mot de passe, merci de cliquer sur le lien suivant : </p>
+	<p>Afin de renouveler votre mot de passe, merci de cliquer sur le lien suivant :
+	</p>
 
-<a href="{{ url('app_reset_password', {token: resetToken.token}) }}">{{ url('app_reset_password', {token: resetToken.token}) }}</a>
+	<a href="{{ url('app_reset_password', {token: resetToken.token}) }}">{{ url('app_reset_password', {token: resetToken.token}) }}</a>
 
-<p>Ce lien expirera dans {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p>
+	<p>Ce lien expirera dans
+		{{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') | replace({"hour": "heure"}) }}.</p>
 
-<p>Au plaisir de vous retrouver sur TeachingHub</p>
+	<p>Au plaisir de vous retrouver sur PartageProf</p>
 
 {% endblock %}
