--- a/templates/user/dashboard.html.twig
+++ b/templates/user/dashboard.html.twig
@@ -98,7 +98,7 @@
 					</a>
 					<a href="https://buymeacoffee.com/lapinou.tech" target="_blank" class="btn btn-sm btn-success my-3 mx-5">
 						<i class="fa-duotone fa-hand-holding-circle-dollar me-2"></i>
-						Soutenir TeachingHub
+						Soutenir PartageProf
 					</a>
 				</div>
 			</div>
