--- a/templates/user/delete-account-email.html.twig
+++ b/templates/user/delete-account-email.html.twig
@@ -10,6 +10,6 @@
 
 	<p>Nous restons bien evidemment à votre service pour toute question et remarque.</p>
 
-	<p>Nous vous souhaitons le meilleur et serions heureux de vous voir revenir sur TeachingHub.</p>
+	<p>Nous vous souhaitons le meilleur et serions heureux de vous voir revenir sur PartageProf.</p>
 
 {% endblock %}
