--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -33,7 +33,7 @@
 					<form action="{{ url('user_account_delete') }}" method="post" class="d-flex flex-column">
 						<input type="hidden" name="token" value="{{ csrf_token('delete-item') }}">
 
-						<button type="submit" class="btn btn-sm btn-danger my-3 mx-5" onclick="return confirm('Êtes-vous sûr(e) de vouloir supprimer votre compte TeachingHub ?')">
+						<button type="submit" class="btn btn-sm btn-danger my-3 mx-5" onclick="return confirm('Êtes-vous sûr(e) de vouloir supprimer votre compte PartageProf ?')">
 							<i class="fa-duotone fa-trash-xmark mx-2"></i>Supprimer mon compte</button>
 					</form>
 				</div>
