--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -7,9 +7,19 @@
 	<div class="container my-5">
 		<h1 class="my-5">Votre demande a bien été prise en compte.</h1>
 		<p>
-			Si un compte correspondant à cette adresse existe, alors un email contenant un lien de renouvellement du mot de passe vous sera envoyé. Ce lien expirera dans {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
+			Si un compte correspondant à cette adresse existe, alors un email contenant un lien de renouvellement du mot de passe vous sera envoyé. Ce lien expirera dans
+			{{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
 		</p>
-		<p>Si vous n'avez reçu aucun email, merci de vérifier votre dossier de spam ou de <a href="{{ path('app_forgot_password_request') }}">réessayer</a>.</p>
-		<p>En cas de problème récurrent, n'hésitez pas à <a href="{{ path('app_contact') }}">nous contacter</a> et nous nous ferons un plaisir de vous aider.</p>
+		<p>Si vous n'avez reçu aucun email, merci de vérifier votre dossier de spam ou de
+			<a href="{{ path('app_forgot_password_request') }}">réessayer</a>.</p>
+		<p>En cas de problème récurrent, n'hésitez pas à
+			<a href="{{ path('app_contact') }}">nous contacter</a>
+			et nous nous ferons un plaisir de vous aider.</p>
+		<p class="text-center">
+			<a href=" {{ path('app_login') }}" class="btn btn-primary">
+				<i class="fa-duotone fa-reply me-2"></i>
+				Retour à la page de connexion
+			</a>
+		</p>
 	</div>
 {% endblock %}
