Update font awesome icons in templates

--- a/templates/app/author-profile.html.twig
+++ b/templates/app/author-profile.html.twig
@@ -117,7 +117,7 @@
 							<th>#</th>
 							<th>Titre</th>
 							<th>
-								<i class="fa-duotone fa-file-arrow-down"></i>
+								<i class="fa-duotone fa-download"></i>
 							</th>
 						</tr>
 					</thead>
