--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -40,7 +40,10 @@
 			<p>Faciliter le partage de connaissances et de ressources pédagogiques entre enseignants pour enrichir l'expérience d'apprentissage.</p>
 			<p>Notre objectif est de créer une communauté collaborative où les enseignants peuvent partager, découvrir et collaborer autour de ressources éducatives de qualité.</p>
 			<span class="center">
-				<a href="{{ path('app_register') }}" class="btn btn-lg btn-primary">Inscrivez-vous maintenant</a>
+				<a href="{{ path('app_register') }}" class="btn btn-lg btn-primary">
+					<i class="fa-duotone fa-person-walking-dashed-line-arrow-right me-2"></i>
+					Inscrivez-vous maintenant
+				</a>
 			</span>
 		</div>
 	</div>
@@ -59,7 +62,10 @@
 					Connectez-vous avec d'autres enseignants, échangez des idées, discutez des meilleures pratiques et améliorez votre enseignement.</li>
 			</ol>
 			<span class="center">
-				<a href="{{ path('app_register') }}" class="btn btn-lg btn-primary">Inscrivez-vous maintenant</a>
+				<a href="{{ path('app_register') }}" class="btn btn-lg btn-primary">
+					<i class="fa-duotone fa-person-walking-dashed-line-arrow-right me-2"></i>
+					Inscrivez-vous maintenant
+				</a>
 			</span>
 		</div>
 		<div class="feature-video feature-video-even d-flex align-items-center justify-content-center">
@@ -86,7 +92,10 @@
 					Découvrez de nouvelles méthodes, approches et stratégies éducatives pour enrichir vos cours et votre enseignement au quotidien.</li>
 			</ul>
 			<span class="center">
-				<a href="{{ path('app_register') }}" class="btn btn-lg btn-primary">Inscrivez-vous maintenant</a>
+				<a href="{{ path('app_register') }}" class="btn btn-lg btn-primary">
+					<i class="fa-duotone fa-person-walking-dashed-line-arrow-right me-2"></i>
+					Inscrivez-vous maintenant
+				</a>
 			</span>
 		</div>
 	</div>
