--- a/templates/user_documents/uploads.html.twig
+++ b/templates/user_documents/uploads.html.twig
@@ -33,7 +33,7 @@
 									<i class="fa-duotone fa-download"></i>
 								</th>
 								<th scope="col" class="text-center">
-									<i class="fa-duotone fa-bookmark"></i>
+									<i class="fa-duotone fa-heart"></i>
 								</th>
 								<th scope="col" class="text-center">
 									<i class="fa-duotone fa-comment"></i>
