--- a/templates/partials/_document.html.twig
+++ b/templates/partials/_document.html.twig
@@ -49,7 +49,7 @@
 			</div>
 			<div class="stats d-flex">
 				<div class="mx-2">
-					<i class="fa-duotone fa-file-arrow-down"></i>
+					<i class="fa-duotone fa-download"></i>
 					{{ document.downloadsNumber }}
 				</div>
 				<div class="mx-2">
