--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -9,7 +9,7 @@
 			</button>
 
 			<div class="collapse navbar-collapse" id="navbarsExample07XL">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-3">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-3 text-end">
 					<li class="nav-item">
 						<a class="nav-link" href="{{ path('document_search') }}">
 							<i class="fa-duotone fa-magnifying-glass me-2"></i>Chercher un document</a>
@@ -22,7 +22,7 @@
 						</li>
 					{% endif %}
 				</ul>
-				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+				<ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-end">
 					{% if app.user %}
 						<li class="nav-item">
 							<a class="nav-link" href="{{ path('user_dashboard') }}">
