--- a/templates/partials/_user-nav.html.twig
+++ b/templates/partials/_user-nav.html.twig
@@ -26,7 +26,7 @@
 				</li>
 				<li class="nav-item mx-auto">
 					<a href="{{ path('user_documents_favorites') }}" class="nav-link">
-						<i class="fa-duotone fa-bookmark me-2"></i>
+						<i class="fa-duotone fa-heart me-2"></i>
 						<span class="hidden-mobile">Mes favoris</span>
 					</a>
 				</li>
