--- a/templates/user_documents/show.html.twig
+++ b/templates/user_documents/show.html.twig
@@ -1,91 +1,59 @@
-{% extends 'base.html.twig' %}
+{% extends 'user/base.html.twig' %}
 
 {% block title %}Liste des documents
 	{{ page }}
 {% endblock %}
 
-{% block body %}
-
-	<div class="container h-100 my-5">
-		<div class="row">
-			<div class="col-3 border border-2">
-				{% include('partials/_user-nav.html.twig') %}
-
-				<div class="row"></div>
-			</div>
-			<div class="col-9">
-				{% for label, messages in app.flashes %}
-					{% for message in messages %}
-						<div class="alert alert-{{ label }} mx-3 alert-dismissible" role="alert">
-							<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-							{{ message }}
-						</div>
-					{% endfor %}
+{% block user_content  %}
+	<div class="container">
+		<h1 class="text-center">Liste des documents
+			{{ page }}</h1>
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th scope="col">Titre du document</th>
+					<th scope="col">Date de dépôt</th>
+					<th scope="col" class="text-center">
+						<i class="fa-duotone fa-download"></i>
+					</th>
+					<th scope="col" class="text-center">
+						<i class="fa-duotone fa-heart"></i>
+					</th>
+					<th scope="col" class="text-center">
+						<i class="fa-duotone fa-comment"></i>
+					</th>
+					<th scope="col"></th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for document in documents %}
+					<tr>
+						<th scope="row">
+							<a href="{{ path('document_show', {slug: document.slug}) }}">{{ document.title }}</a>
+						</th>
+						<td>{{ document.uploadedAt | format_datetime('short', 'short', locale='fr') }}</td>
+						<td class="text-center">{{ document.downloadsNumber }}</td>
+						<td class="text-center">{{ document.favoriteUsers | length }}</td>
+						<td class="text-center">{{ document.comments | length }}</td>
+						{% if page == 'déposés' %}
+							<td class="text-center">
+								<a href="{{ path('document_update', {'slug': document.slug}) }}">
+									<i class="fa-duotone fa-file-pen me-2 text-primary"></i>
+								</a>
+								<a href="{{ path('document_delete', {'slug': document.slug}) }}" onclick="return confirm('Êtes-vous sûr(e) de vouloir supprimer définitivement le document {{ document.title }} ?')">
+									<i class="fa-duotone fa-trash"></i>
+								</a>
+							</td>
+						{% else %}
+							<td class="text-center">
+								<a href="{{ asset('uploads/documents/' ~ document.file) }}" id="downloadButton" data-id="{{ document.id }}" download="{{ document.slug }}">
+									<i class="fa-duotone fa-download text-success"></i>
+								</a>
+							</td>
+						{% endif %}
+					</tr>
 				{% endfor %}
-
-				<div class="container">
-					<h1 class="text-center">Liste des documents
-						{{ page }}</h1>
-					<table class="table table-striped">
-						<thead>
-							<tr>
-								<th scope="col">Titre du document</th>
-								<th scope="col">Date de dépôt</th>
-								<th scope="col" class="text-center">
-									<i class="fa-duotone fa-download"></i>
-								</th>
-								<th scope="col" class="text-center">
-									<i class="fa-duotone fa-bookmark"></i>
-								</th>
-								<th scope="col" class="text-center">
-									<i class="fa-duotone fa-comment"></i>
-								</th>
-								<th scope="col"></th>
-							</tr>
-						</thead>
-						<tbody>
-							{% for document in documents %}
-								<tr>
-									<th scope="row">
-										<a href="{{ path('document_show', {slug: document.slug}) }}">{{ document.title }}</a>
-									</th>
-									<td>{{ document.uploadedAt | format_datetime('short', 'short', locale='fr') }}</td>
-									<td class="text-center">{{ document.downloadsNumber }}</td>
-									<td class="text-center">{{ document.favoriteUsers | length }}</td>
-									<td class="text-center">{{ document.comments | length }}</td>
-									{% if page == 'déposés' %}
-										<td class="text-center">
-											<a href="{{ path('document_update', {'slug': document.slug}) }}">
-												<i class="fa-duotone fa-file-pen me-2 text-primary"></i>
-											</a>
-											<a href="{{ path('document_delete', {'slug': document.slug}) }}" onclick="return confirm('Êtes-vous sûr(e) de vouloir supprimer définitivement le document {{ document.title }} ?')">
-												<i class="fa-duotone fa-trash"></i>
-											</a>
-										</td>
-									{% else %}
-										<td class="text-center">
-											<a href="{{ path('document_show', {slug: document.slug}) }}" class="btn btn-sm btn-primary">
-												<i class="fa-duotone fa-rabbit-running me-2"></i>
-												Accéder
-											</a>
-											<a href="{{ asset('uploads/documents/' ~ document.file) }}" class="btn btn-sm btn-success" id="downloadButton" data-id="{{ document.id }}" download="{{ document.slug }}">
-												<i class="fa-duotone fa-download me-2"></i>
-												Télécharger
-											</a>
-										</td>
-									{% endif %}
-								</tr>
-							{% endfor %}
-						</tbody>
-					</table>
-
-				</div>
-			</div>
-
-		</div>
+			</tbody>
+		</table>
 	</div>
-
-	{% for flash_error in app.flashes('user_error') %}
-		<div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-	{% endfor %}
 {% endblock %}
