Update templates and controllers to remove debug statements and improve user experience

--- a/templates/app/home_connected.html.twig
+++ b/templates/app/home_connected.html.twig
@@ -28,9 +28,9 @@
 					<div class="d-flex flex-column justify-content-center">
 						<p class="h1 fw-bold">{{ nbDownloads }}</p>
 						<h2>Téléchargements</h2>
-						<a href="{{ path('document_add') }}" class="btn btn-primary mx-5">
-							<i class="fa-duotone fa-file-arrow-up"></i>
-							Déposer un document
+						<a href="{{ path('document_top_downloads') }}" class="btn btn-primary mx-5">
+							<i class="fa-duotone fa-ranking-star me-2"></i>
+							Les plus téléchargés
 						</a>
 					</div>
 				</div>
